--- a/reminders/package.json
+++ b/reminders/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^15.4.1",
+    "react-cookie": "^1.0.4",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0"
