--- a/goalCoach/package.json
+++ b/goalCoach/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "firebase": "^3.6.4",
+    "history": "^4.5.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   },
